--- a/index.html
+++ b/index.html
@@ -46,15 +46,16 @@
               <div class="more-content">
                 <nav class="even-more-content">
                   <nav class="home-parent">
-                    <a class="home">HOME</a>
-                    <a class="schedule">SCHEDULE</a>
-                    <a class="tracks">TRACKS</a>
-                    <a class="partners">PARTNERS</a>
+                    <a href="#" class="home">HOME</a>
+                    <a href="#" class="schedule">SCHEDULE</a>
+                    <a href="#" class="tracks">TRACKS</a>
+                    <a href="#" class="partners">PARTNERS</a>
                   </nav>
                 </nav>
-                <a class="register-now">Register now</a>
+                <a href="#" class="register-now">Register now</a>
               </div>
             </header>
+            
             <div class="frame-parent">
               <div class="chandigarh-content-wrapper">
                 <div class="chandigarh-content">
@@ -65,12 +66,6 @@
                   </div>
                   <div class="register-herohacks">
                     <div class="register-herohacks-button">
-                      <img
-                        class="file-2-icon"
-                        alt=""
-                        src="./public/file-2@2x.png"
-                      />
-
                       <h3 class="register-now1">Register now</h3>
                     </div>
                     <h1 class="hero-hacks-is-here-container">
@@ -126,12 +121,6 @@
                     </div>
                   </div>
                   <div class="release-title">
-                    <img
-                      class="release-title-child"
-                      alt=""
-                      src="./public/group-17@2x.png"
-                    />
-
                     <div class="release-lorem-ispum-container">
                       <p class="release">Release</p>
                       <p class="lorem-ispum-cant">
